@@ -11,6 +11,7 @@ Options:
      [--prefix]
      [--version]
      [--libs]
+     [--clibs]
      [--cflags]
      [--ldflags]
      [--includes]
@@ -38,6 +39,9 @@ case $1 in
       ;;
     --libs)
       echo -L${libdir} -lgeos
+      ;;
+    --clibs)
+      echo -L${libdir} -lgeos_c
       ;;
     --ldflags)
       echo -L${libdir}
