@@ -12,6 +12,7 @@ YYYY-MM-DD
     - Fix CascadedPolygonUnion to discard non-polygonal components (#499)
     - Improve buffer robustness by reverting to non-snaprounding noder (#495)
     - Fix C++11 build by avoiding std::pair<auto_ptr> (#491)
+    - Add --clibs to geos-config and GEOS_C_LIBS to geos.m4 (#497)
 
 Changes in 3.3.1
 2011-09-27
